--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+
+
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700;900&display=swap" rel="stylesheet">
 
 
@@ -22,13 +26,8 @@
    
     <header>
 
-        <a href="./index.html">
 
-            <img class="pizzalogo" src="https://emojigraph.org/media/joypixels/pizza_1f355.png" alt="pizzalogo">
-        </a>
-
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -39,17 +38,60 @@
                   <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../views/productos.html">Productos</a>
+                  <a class="nav-link" href="../views/productos.html">Pizzas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../views/puntosdeventa.html">Puntos de Venta</a>
+                  <a class="nav-link" href="../views/empanadas.html">Empanadas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/puntosdeventa.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../views/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
+            <div class="container">
+              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid1">
+                  <a class="navbar-brand" href="./index.html"><img class="pizzalogo" src="../img/logo.png" alt=""></a>
+                </div>
+              </nav>
+            </div>
+        </nav-->
+
+
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+          <!-- Brand -->
+          
+        
+          <!-- Toggler/collapsibe Button -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img class="pizzalogo" src="../img/logo.png" alt=""></a>
+          <!-- Navbar links -->
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/productos.html">Pizza</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/empanadas.html">Empanadas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/puntosdeventa.html">Sucursales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </nav>
+
     
 
     </header>
@@ -68,41 +110,51 @@
     <br>
     <br>
 
+      <div class="formula">
 
-        <form>
+          <form>
             <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
-            <label for="exampleInputPassword1">Nombre</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+              <label for="exampleInputPassword1">Nombre</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Recordarme</label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+          </form>
+
+
+      </div>
 
 
 
-    <footer>
-        <h6>2020 - Pizzería Picante</h6>
+        
 
-    <div class="redes">
+      <footer>
+        <h6 class="frase">2020 - Pizzería Picante</h6>
+  
+        <h6 class="mail"> pizzeria.picante@gmail.com</h6>
+  
+        <div class="redes">
+          <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+            <img src="https://img.icons8.com/pastel-glyph/2x/whatsapp.png" alt="">
+          </a>
+          <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+            <img src="https://www.idea-imagen.com/productos/images/twitter-4-icon.png" alt="">
+          </a>
+          <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+            <img src="../insta.png" alt="">
+          </a>
+          
+        </div>
+      </footer>
 
-        <li><a href="">WPP</a></li>
-        <li><a href="">TWITTER</a></li>
-        <li><a href="">INSTAGRAM</a></li>
-        <li><a href="">SNAPCHAT</a></li>
-
-
-    </div>
-
-
-    </footer>
 
 
 </body>
