--- a/views/productos.html
+++ b/views/productos.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+
+
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -13,20 +17,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <title>Productos y Promociones</title>
+    <title>Pizzas y Promociones</title>
 
 </head>
 <body>
     
     <header>
 
-        <a href="./index.html">
 
-            <img class="pizzalogo" src="https://emojigraph.org/media/joypixels/pizza_1f355.png" alt="pizzalogo">
-        </a>
-
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -37,29 +36,79 @@
                   <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../views/productos.html">Productos</a>
+                  <a class="nav-link" href="../views/productos.html">Pizzas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../views/puntosdeventa.html">Puntos de Venta</a>
+                    <a class="nav-link" href="../views/empanadas.html">Empanadas</a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/puntosdeventa.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../views/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
-        </nav>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                  <div class="container-fluid1">
+                    <a class="navbar-brand" href="./index.html"><img class="pizzalogo" src="../img/logo.png" alt=""></a>
+                  </div>
+                </nav>
+              </div>
+        </nav-->
+
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <!-- Brand -->
+            
+          
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img class="pizzalogo" src="../img/logo.png" alt=""></a>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/productos.html">Pizza</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/empanadas.html">Empanadas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/puntosdeventa.html">Sucursales</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
+
 
     </header>
 
-
-    <h2>Nuestras Pizzas</h2>
-
-
-    <br>
-    <br>
     <br>
 
-    <table border="1px solid black">
+    <div class="titulopizza">
+
+        <h2>Nuestras Pizzas</h2>
+
+    </div>
+
+    
+
+
+    
+    <br>
+    <br>
+
+    <table class="pizzas" border="3px solid black">
 
         <tr>
 
@@ -162,26 +211,292 @@
 
         </tr>
 
+        <tr>
+
+            <th>Cuatro Quesos</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>695</li>
+                    <li>820</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UNA gaseosa de 3 litros de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes DOS gaseosas de 3 litros de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
+        <tr>
+
+            <th>Calabresa</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>645</li>
+                    <li>765</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UN BOX de papas y una gaseosa de 1.5 litros de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes DOS BOX de nachos y TRES corona de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
+        <tr>
+
+            <th>Anchoas</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>605</li>
+                    <li>700</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UN BOX de papas de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes UN BOX de papas y otro de nachos de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
+        <tr>
+
+            <th>Capresse</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>595</li>
+                    <li>695</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UNA gaseosa de 3 litros de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes DOS gaseosas de 3 litros de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
+        <tr>
+
+            <th>Roquefort</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>610</li>
+                    <li>725</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UN BOX de papas y una gaseosa de 1.5 litros de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes DOS BOX de nachos y TRES corona de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
+        <tr>
+
+            <th>Jamón con Huevo</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>630</li>
+                    <li>750</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UN BOX de papas de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes UN BOX de papas y otro de nachos de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
+        <tr>
+
+            <th>Fugazzeta</th>
+
+            <th>
+                <ol>
+                    <li>Grande</li>
+                    <li>Gigante</li>
+                </ol>
+                
+            </th>
+
+            <th>
+                <ol>
+                    <li>650</li>
+                    <li>765</li>
+                </ol>
+
+            </th>
+
+            <th>
+                <ol>
+                    <li>Llevando 2 GRANDES tenes UNA gaseosa de 3 litros de regalo.</li>
+                    <li>Llevando 2 GIGANTES tenes DOS gaseosas de 3 litros de regalo.</li>
+                </ol>
+
+            </th>
+
+        </tr>
+
     </table>
+
+
+    <div
+    id="carouselExampleInterval"
+    class="carousel slide"
+    data-ride="carousel"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-interval="10000">
+        <img
+          src="https://images.unsplash.com/photo-1595708684082-a173bb3a06c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=745&q=80"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div class="carousel-item" data-interval="2000">
+        <img
+          src="https://images.unsplash.com/photo-1561350111-7daa4f284bc6?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://images.unsplash.com/photo-1588315029754-2dd089d39a1a?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=751&q=80"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleInterval"
+      role="button"
+      data-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleInterval"
+      role="button"
+      data-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+      
+  <br>
+  <br>
+
 
 
 
     <footer>
-        <h6>2020 - Pizzería Picante</h6>
-
-    <div class="redes">
-
-        <li><a href="">WPP</a></li>
-        <li><a href="">TWITTER</a></li>
-        <li><a href="">INSTAGRAM</a></li>
-        <li><a href="">SNAPCHAT</a></li>
-
-
-    </div>
-
-
-    </footer>
-
+        <h6 class="frase">2020 - Pizzería Picante</h6>
+  
+        <h6 class="mail"> pizzeria.picante@gmail.com</h6>
+  
+        <div class="redes">
+          <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+            <img src="https://img.icons8.com/pastel-glyph/2x/whatsapp.png" alt="">
+          </a>
+          <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+            <img src="https://www.idea-imagen.com/productos/images/twitter-4-icon.png" alt="">
+          </a>
+          <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+            <img src="../insta.png" alt="">
+          </a>
+          
+        </div>
+      </footer>
 
 
 
