--- a/views/puntosdeventa.html
+++ b/views/puntosdeventa.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+
 
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700;900&display=swap" rel="stylesheet">
 
@@ -21,12 +24,7 @@
     
     <header>
 
-        <a href="./index.html">
-
-            <img class="pizzalogo" src="https://emojigraph.org/media/joypixels/pizza_1f355.png" alt="pizzalogo">
-        </a>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -37,24 +35,67 @@
                   <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../views/productos.html">Productos</a>
+                  <a class="nav-link" href="../views/productos.html">Pizzas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../views/puntosdeventa.html">Puntos de Venta</a>
+                  <a class="nav-link" href="../views/empanadas.html">Empanadas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../views/puntosdeventa.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../views/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
-        </nav>
+            <div class="container">
+              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid1">
+                  <a class="navbar-brand" href="./index.html"><img class="pizzalogo" src="../img/logo.png" alt=""></a>
+                </div>
+              </nav>
+            </div>
+        </nav-->
     
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+          <!-- Brand -->
+          
+        
+          <!-- Toggler/collapsibe Button -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img class="pizzalogo" src="../img/logo.png" alt=""></a>
+          <!-- Navbar links -->
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/productos.html">Pizza</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/empanadas.html">Empanadas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/puntosdeventa.html">Sucursales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../views/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+
 
     </header>
 
+    <br>
     <div class="tituloVenta tituloVenta--nuevo">
 
-      <h1 class="tituloVenta__puntos">PUNTOS DE VENTA</h1>
+      
 
       <br>
 
@@ -64,26 +105,43 @@
       <br>
     </div>
 
-    
+    <div class="mapaycarta">
+      <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52563.48321188003!2d-58.456035035016534!3d-34.5733576751042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1604435663354!5m2!1ses-419!2sar"  
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52563.48321188003!2d-58.456035035016534!3d-34.5733576751042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb59c771eb933%3A0x6b3113b596d78c69!2sPalermo%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1604435663354!5m2!1ses-419!2sar"  
-    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+      
+      <div class="entrega">
+        <img src="https://images.unsplash.com/photo-1594392175511-30eca83d51c8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Vení a nuestra sucursal que este más cerca tuyo y retira tu pedido cuando este listo!</p>
+        </div>
+      </div>
+
+    </div>
+ 
+    <br>
+    <br>
 
 
     <footer>
-        <h6>2020 - Pizzería Picante</h6>
+      <h6 class="frase">2020 - Pizzería Picante</h6>
 
-    <div class="redes">
+      <h6 class="mail"> pizzeria.picante@gmail.com</h6>
 
-        <li><a href="">WPP</a></li>
-        <li><a href="">TWITTER</a></li>
-        <li><a href="">INSTAGRAM</a></li>
-        <li><a href="">SNAPCHAT</a></li>
-
-
-    </div>
-
-
+      <div class="redes">
+        <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+          <img src="https://img.icons8.com/pastel-glyph/2x/whatsapp.png" alt="">
+        </a>
+        <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+          <img src="https://www.idea-imagen.com/productos/images/twitter-4-icon.png" alt="">
+        </a>
+        <a href="https://www.youtube.com/watch?v=HioPaqrdZvA">
+          <img src="../insta.png" alt="">
+        </a>
+        
+      </div>
     </footer>
 
 
